--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "staging": "nodemon src/index.js",
+    "start": "node scripts/index.js"
+  },
   "dependencies": {
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
     "js-logger": "^1.6.1",
-    "node-telegram-bot-api": "^0.54.0"
+    "node-telegram-bot-api": "^0.54.0",
+    "nodemon": "^2.0.13",
+    "uuid": "^8.3.2"
   }
 }
